--- a/pertemuan2/tugas1.html
+++ b/pertemuan2/tugas1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas Lamaran Pekerjaan</title>
 </head>
-<body>
+<br>
     <h1>Lamaran Pekerjaan</h1>
     <img src="ananda.jpg" alt="Foto Profile" 
         width="150"
@@ -41,14 +41,15 @@
         </tr>
     </table>
 
-    <p>Saya Ingi mengajukan lamaran untuk posisi <b>Cyber Security</b> di PT Goto International. 
-        Saya memiliki keterampilan dalam Jaringan(networking) dan Pengujian penetrasi</p>
+    <p>Saya ingin mengajukan lamaran untuk posisi <b>Cyber Security</b> di PT Goto International. 
+        Saya memiliki keterampilan dalam Networking dan Pengujian Penetrasi.</p>
 
     <h2>Kemampuan</h2>
     <ul>
-        <li>HTML, CSS, JavaScript</li>
-        <li>PHP & MySql</li>
+        <li>HTML, CSS, Java</li>
+        <li>MySql</li>
         <li>Python, C++</li>
+        <li>Cisco</li>
     </ul>
 
     <p>Berikut adalah tautan ke portofolio saya:</p>
